# xv6-riscv

./: CMakeLists.txt  Makefile
kernel/: defs.h  kalloc.c  memlayout.h  proc.c  proc.h  syscall.c  syscall.h  sysinfo.c  sysinfo.h  sysproc.c  trap.c  vm.c
user/: cowtest.c  getProcTicksTest.c  sysinfoTest.c  systWaittest.c  user.h  usys.pl
