cmake_minimum_required(VERSION 3.23)
project(xv6_riscv)

set(CMAKE_CXX_STANDARD 14)

include_directories(kernel)
include_directories(user)

add_executable(xv6_riscv
        .idea/.gitignore
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .idea/xv6-riscv.iml
        cmake-build-debug/.cmake/api/v1/query/cache-v2
        cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
        cmake-build-debug/.cmake/api/v1/query/codemodel-v2
        cmake-build-debug/.cmake/api/v1/query/toolchains-v1
        cmake-build-debug/.cmake/api/v1/reply/cache-v2-9b40255810d61291762b.json
        cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-fd7d2b2e6d65b5160845.json
        cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-2370737ab9b75f4bd5a0.json
        cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
        cmake-build-debug/.cmake/api/v1/reply/index-2023-03-26T22-45-01-0541.json
        cmake-build-debug/.cmake/api/v1/reply/target-xv6_riscv-Debug-69424cfd65652f1eed70.json
        cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-c22c8866df6eed65b8d9.json
        cmake-build-debug/Testing/Temporary/LastTest.log
        cmake-build-debug/build.ninja
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        kernel/bio.c
        kernel/buf.h
        kernel/console.c
        kernel/defs.h
        kernel/elf.h
        kernel/entry.S
        kernel/exec.c
        kernel/fcntl.h
        kernel/file.c
        kernel/file.h
        kernel/fs.c
        kernel/fs.h
        kernel/kalloc.c
        kernel/kernel.ld
        kernel/kernelvec.S
        kernel/log.c
        kernel/main.c
        kernel/memlayout.h
        kernel/param.h
        kernel/pipe.c
        kernel/plic.c
        kernel/printf.c
        kernel/proc.c
        kernel/proc.h
        kernel/ramdisk.c
        kernel/riscv.h
        kernel/sleeplock.c
        kernel/sleeplock.h
        kernel/spinlock.c
        kernel/spinlock.h
        kernel/start.c
        kernel/stat.h
        kernel/string.c
        kernel/swtch.S
        kernel/syscall.c
        kernel/syscall.h
        kernel/sysfile.c
        kernel/sysproc.c
        kernel/trampoline.S
        kernel/trap.c
        kernel/types.h
        kernel/uart.c
        kernel/virtio.h
        kernel/virtio_disk.c
        kernel/vm.c
        mkfs/mkfs.c
        user/cat.c
        user/echo.c
        user/forktest.c
        user/grep.c
        user/grind.c
        user/init.c
        user/initcode.S
        user/kill.c
        user/ln.c
        user/ls.c
        user/mkdir.c
        user/printf.c
        user/rm.c
        user/sh.c
        user/stressfs.c
        user/ulib.c
        user/umalloc.c
        user/user.h
        user/user.ld
        user/usertests.c
        user/usys.pl
        user/wc.c
        user/zombie.c
        .dir-locals.el
        .editorconfig
        .gdbinit.tmpl-riscv
        .gitignore
        LICENSE
        Makefile
        README
        user/getProcTicksTest.c kernel/sysinfo.c kernel/sysinfo.h user/systWaittest.c)
